# django-hatchway

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.rst  benchmark_results.csv  benchmark_results.md  justfile  pyproject.toml
benchmarks/: QUICKSTART.md  README.md  conftest.py  export_benchmarks.py  factories.py  test_api_performance.py  test_framework_internals.py
demo/: README.md  db.sqlite3
demo/api/: admin.py  models.py  openapi.yaml  schemas.py  urls.py  views.py
demo/api/migrations/: 0001_initial.py
demo/demo/: settings.py  urls.py
hatchway/: __init__.py  admin.py  auth.py  http.py  models.py  permissions.py  schema.py  types.py  view.py
hatchway/management/commands/: create_token.py
hatchway/migrations/: 0001_initial.py
hatchway/openapi/: __init__.py  config.py  generator.py  schema.py  views.py
tests/: test_auth.py  test_auth_views.py  test_types.py  test_view.py
tests/test_openapi/: __init__.py  test_config.py  test_plugins.py  test_request_body.py  test_responses.py  test_schema_conversion.py  test_spec_generation.py
