[build-system]
build-backend = "uv_build"

requires = [ "uv-build>=0.9.20,<0.10" ]

[project]
name = "django-hatchway"
version = "1.0.0"

description = "An unsurprising Django API framework"
readme = "README.rst"
license = { text = "BSD-3-Clause" }
authors = [
  { name = "Andrew Godwin", email = "andrew@aeracode.org" },
]
requires-python = ">=3.10"
classifiers = [
  "Framework :: Django",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "django>=4",
  "msgspec>=0.18.0",
]

[dependency-groups]
dev = [
  "pytest~=7.2",
  "pytest-django~=4.5",
]
bench = [
  "pytest-benchmark~=4.0",
  "factory-boy~=3.3",
  "faker~=22.0",
]

[tool.setuptools.dynamic]
version = { attr = "hatchway.__version__" }

[tool.pytest.ini_options]
pythonpath = [ ".", "demo" ]
testpaths = [
  "tests",
]

DJANGO_SETTINGS_MODULE = "tests.test_project.settings"
django_find_project = false

[tool.uv.build-backend]
module-name = "hatchway"
module-root = ""
